--- a/css/master.css
+++ b/css/master.css
@@ -19,7 +19,7 @@
     /* set the text color to black here */
     /* set the font here */
     /* set the text alignment here */
-    background-color: beige;
+    background-color: #ffe6ff;
     color: black;
     font=family: Arial, Helvetica, sans-serif;
     text-align: center;
