--- a/css/master.css
+++ b/css/master.css
@@ -5,13 +5,17 @@
   a {
     color: black;
     /* set the text color to blue here */
-    text-decoration: none; /* This means we do not want hyperlinks to be underlined */
+    text-decoration: none; 
+    
+    font=family: Lucida Console;/* This means we do not want hyperlinks to be underlined */
   }
 
   a:hover {
     color: red;
     /* set the text color to red here */
-    text-decoration: none; /* This means we do not want hyperlinks to be underlined */
+    text-decoration: none;
+    
+    font=family: Lucida Console;/* This means we do not want hyperlinks to be underlined */
   }
 
   body {
