--- a/css/master.css
+++ b/css/master.css
@@ -24,7 +24,7 @@
     /* set the font here */
     /* set the text alignment here */
     background-color: white ;
-    color: #1ABC9C;
+    color: white;
     font=family: Lucida Console;
     text-align: center;
    }
