--- a/css/master.css
+++ b/css/master.css
@@ -42,7 +42,7 @@
   h2 {
     /* set the text color of to #075AAB here */
     /* set both the bottom margin and top margin to 2.5rem here */
-    color: #075AAB;
+    color: #1ABC9C;
     margin-bottom: 2.5rem;
     margin-top: 2.5rem;
    }
