--- a/css/master.css
+++ b/css/master.css
@@ -23,7 +23,7 @@
     /* set the text color to black here */
     /* set the font here */
     /* set the text alignment here */
-    background-color: #FCF3CF ;
+    background-color: #91D8F5 ;
     color: #0B5345;
     font=family: Lucida Console;
     text-align: center;
