--- a/css/master.css
+++ b/css/master.css
@@ -23,7 +23,7 @@
     /* set the text color to black here */
     /* set the font here */
     /* set the text alignment here */
-    background-color: #91D8F5 ;
+    background-color: white ;
     color: black;
     font=family: Lucida Console, Courier New, monospace;
     text-align: center;
