--- a/css/master.css
+++ b/css/master.css
@@ -46,7 +46,7 @@
   h2 {
     /* set the text color of to #075AAB here */
     /* set both the bottom margin and top margin to 2.5rem here */
-    color: #0B5345;
+    color: #a6a6a6;
     margin-bottom: 2.5rem;
     margin-top: 2.5rem;
    }
