--- a/css/master.css
+++ b/css/master.css
@@ -1,13 +1,7 @@
 /* Cascading stylesheet for the website */
 
 /* Text inside these asterisks and slashes are comments for human */
-html{
-  background: url(images/back.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+
   a {
     color: #3498DB ;
     /* set the text color to blue here */
@@ -29,6 +23,9 @@ html{
     /* set the text color to black here */
     /* set the font here */
     /* set the text alignment here */
+    height: 200px;
+  background-color: #cccccc;
+  background-image: linear-gradient(red, yellow);
     color: black;
     font-family: Lucida Console, Courier New, monospace;
     text-align: center;
