--- a/css/master.css
+++ b/css/master.css
@@ -2,7 +2,7 @@
 
 /* Text inside these asterisks and slashes are comments for human */
 html { 
-  background: url(images/banner.jpg) no-repeat center center fixed; 
+  background: url(images/bg.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
