--- a/css/master.css
+++ b/css/master.css
@@ -23,6 +23,7 @@
     /* set the text color to black here */
     /* set the font here */
     /* set the text alignment here */
+    background-color: #e6ffff;
     color: black;
     font-family: Lucida Console, Courier New, monospace;
     text-align: center;
