--- a/css/master.css
+++ b/css/master.css
@@ -23,6 +23,9 @@
     /* set the text color to black here */
     /* set the font here */
     /* set the text alignment here */
+    background-image: url("banner.gif");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-color: #e6ffff;
     color: black;
     font-family: Lucida Console, Courier New, monospace;
